--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,3 +11,6 @@ jobs:
         run: echo "Aqui eu executo o teste de software"
       - name: Publicando a Release
         run: echo "Publicação da Relase final"
+  CD:
+    needs: [CI]
+    uses: Curso-Devops-Pro-2025/reaproveitamento-workflow/.github/workflows/cd.yaml@master
