--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,9 +1,16 @@
 name: Fake Deploy
 on:
   workflow_call:
+    inputs:
+      environment:
+        type: string
+        default: dev
+        required: true
+        description: Environment of deployment
+
 jobs:
   deploy-k8s:
     runs-on: ubuntu-latest
     steps:
       - name: Deploy no ambiente
-        run: echo "Executando o deploy no ambiente de desenvolvimento"
+        run: echo "Executando o deploy no ambiente de ${{ inputs.environment }}"
