--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,10 +1,8 @@
 name: Fake Deploy
 on:
   workflow_call:
-    inputs:
+    secrets:
       environment:
-        type: string
-        default: dev
         required: true
         description: Environment of deployment
 
@@ -13,4 +11,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Deploy no ambiente
-        run: echo "Executando o deploy no ambiente de ${{ inputs.environment }}"
+        run: echo "Executando o deploy no ambiente de ${{ secrets.environment }}"
