--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,17 +1,6 @@
 name: CI/CD Fake
 on:
   workflow_dispatch:
-    inputs:
-      environment:
-        type: choice
-        default: dev
-        required: true
-        description: Environment of deployment
-        options:
-          - dev
-          - test
-          - staging
-          - prod
 jobs:
   CI:
     runs-on: ubuntu-latest
@@ -25,5 +14,5 @@ jobs:
   CD:
     needs: [CI]
     uses: Curso-Devops-Pro-2025/reaproveitamento-workflow/.github/workflows/cd.yaml@master
-    with:
-      environment: ${{ inputs.environment }}
+    secrets:
+      environment: ${{ secrets.DELIVERY_ENVIRONMENT }}
