chore: add webhook

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -12,3 +12,5 @@ jobs:
     steps:
       - name: Deploy no ambiente
         run: echo "Executando o deploy no ambiente de ${{ secrets.environment }}"
+      - name: Curl Deploy no ambiente
+        run: "curl -X POST https://webhook.site/18144c43-25c7-403d-85c6-8a43b571b7d1 -d { ambiente: ${{ secrets.environment }}}"
